docs: reach all fifteen language packages, and correct what the C-ABI pages claim
The SDK pages were written while the packages were still landing, so they
described eight sidecar wrappers and a growing list. There are fifteen
packages and fourteen of them also run the gateway in-process.

docs/sdks.md now gives a first call in every one of the fifteen — the
coordinates, a working snippet, and a run command that exists in this repo
(verified by running sdks/go/examples/run.sh, which serves both modes offline
against ffi/fakeupstream). It also states which mechanism each language
defaults to and why, one measured reason per family.

Three claims were wrong rather than merely thin:

- SIGPROF. c-abi.md and TROUBLESHOOTING.md both said the Go runtime installs a
  SIGPROF handler. sdks/java/signal-probe.sh measures the opposite: SIGPROF is
  UNCHANGED, JFR collected 428 execution samples with the library loaded, and
  the five handlers actually replaced are SIGSEGV, SIGBUS, SIGFPE, SIGPIPE and
  SIGURG, with SA_ONSTACK added to three more. The hazard everyone cites is not
  the one that exists. (ffi/README.md still carries the old sentence; that file
  is owned elsewhere.)
- The fork hazard had no false green attached. The models call is answered from
  memory, so it SUCCEEDS in a broken child while chat hangs forever — a health
  check that lists models is a green light for a worker that will hang on its
  first real request.
- Cancelling a stream was documented as if it stopped the spend. The ABI stops
  promptly; a buffered wrapper over it does not, and in one measured case a
  consumer taking 3 of 10 chunks still generated and metered all 10.

client-examples.md's mechanism table named eight languages as sidecar-only and
omitted bun, deno, swift, kotlin, c and cpp entirely. sdks.md claimed the
sdk-test target runs every suite; it runs nine of the fifteen, and bun, deno
and kotlin have no test suite at all — all three facts now stated rather than
papered over.

Headi